fixing the href in index.html again

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
         <div class="collapse navbar-toggleable-sm" id="navbar">
             <ul class="nav navbar-nav">
-				<div class="nav-square col-sm-4"><a href="../TheCohortsPWA/views/About.html">About Us</a></div>
-				<div class="nav-square col-sm-4"><a href="../TheCohortsPWA/views/Services.html">Services</a></div>
-				<div class="nav-square col-sm-4"><a href="../TheCohortsPWA/views/ContactUs.html">Contact Us</a></div>
+				<div class="nav-square col-sm-4"><a href="views/About.html">About Us</a></div>
+				<div class="nav-square col-sm-4"><a href="views/Services.html">Services</a></div>
+				<div class="nav-square col-sm-4"><a href="views/ContactUs.html">Contact Us</a></div>
 			</ul>
 		</div>
 
