--- a/index.html
+++ b/index.html
@@ -29,33 +29,38 @@
 </head>
 
 <body>
-    <!-- Navigation -->
-	<div class="header-img" id="topWelcome" class="card-header"><div class="navbar-brand" href="#" style="float: right; padding: 50px;">Kent Church Logo</div> </div>
-    <nav id="topNav" class="navbar navbar-full navbar-top navbar-dark bg-inverse m-b-3">
-        <button class="navbar-toggler hidden-md-up pull-right" type="button" data-toggle="collapse" data-target="#navbar">
-            &#9776;
-        </button>
+<!-- Navigation -->
 
-        <div class="collapse navbar-toggleable-sm" id="navbar">
-            <ul class="nav navbar-nav">
-				<div class="nav-square col-sm-4"><a href="views/About.html">About Us</a></div>
-				<div class="nav-square col-sm-4"><a href="views/Services.html">Services</a></div>
-				<div class="nav-square col-sm-4"><a href="views/ContactUs.html">Contact Us</a></div>
+	<div class="navbar" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="views/About.html"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+						<path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+					</svg> About Us</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="views/Services.html"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-building" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+						<path fill-rule="evenodd" d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694L1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z"/>
+						<path d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z"/>
+					</svg> Services</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="views/ContactUs.html"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+						<path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
+						<path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+					</svg> Contact Us</a>
+				</li>
 			</ul>
-		</div>
+		<span class="navbar-text">
+      Here to help those in need.
+    </span>
+	</div>
+	<div class="nav-scroller bg-white shadow-sm">
+	<nav class="nav nav-underline"></nav>
+	</div>
 
-            </ul>
-
-            </ul>
-        </div>
-    </nav>
-    
-
-<div class="container-fluid">
-
-		<!-- Left Column -->
-		<div class="col-sm-9">
-		<p>Test</p>
+<!-- Left Column -->
+<div id="generalbox" class="col-sm-9">
 			<!-- List-Group Panel -->
 			<div class="card">
 				<div class="card-header p-b-0">
@@ -104,63 +109,11 @@
 		</div><!--/Left Column-->
   
   
-		<!-- Center Column -->
-<!--		<div class="col-sm-6">-->
-<!--		-->
-<!--			&lt;!&ndash; Alert &ndash;&gt;-->
-<!--			<div class="alert alert-success alert-dismissible" role="alert">-->
-<!--				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
-<!--				<strong>Synergize:</strong> Seamlessly visualize quality intellectual capital!-->
-<!--			</div>		-->
-<!--		-->
-<!--			&lt;!&ndash; Articles &ndash;&gt;-->
-<!--			<div class="row">-->
-<!--				<article class="col-xs-12">-->
-<!--					<h2>Premier Niche Markets</h2>-->
-<!--					<p>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>-->
-<!--					<p><button class="btn btn-outline-success">Read More</button></p>-->
-<!--					<p class="pull-right"><span class="tag tag-default">keyword</span> <span class="tag tag-default">tag</span> <span class="tag tag-default">post</span></p>-->
-<!--					<ul class="list-inline">-->
-<!--						<li class="list-inline-item"><a href="#">Today</a></li>-->
-<!--						<li class="list-inline-item"><a href="#"><span class="glyphicon glyphicon-comment"></span> 2 Comments</a></li>-->
-<!--						<li class="list-inline-item"><a href="#"><span class="glyphicon glyphicon-share"></span> 8 Shares</a></li>-->
-<!--					</ul>-->
-<!--				</article>-->
-<!--			</div>-->
-<!--			<hr>-->
-<!--			<div class="row">-->
-<!--				<article class="col-xs-12">-->
-<!--					<h2>Proactively Envisioned</h2>-->
-<!--					<p>Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products. Proactively envisioned multimedia based expertise and cross-media growth strategies.</p>-->
-<!--					<p><button class="btn btn-outline-primary">Read More</button></p>-->
-<!--					<p class="pull-right"><span class="tag tag-default">keyword</span> <span class="tag tag-default">tag</span> <span class="tag tag-default">post</span></p>-->
-<!--					<ul class="list-inline">-->
-<!--						<li class="list-inline-item"><a href="#">Yesterday</a></li>-->
-<!--						<li class="list-inline-item"><a href="#"><span class="glyphicon glyphicon-comment"></span> 21 Comments</a></li>-->
-<!--						<li class="list-inline-item"><a href="#"><span class="glyphicon glyphicon-share"></span> 36 Shares</a></li>-->
-<!--					</ul>-->
-<!--				</article>-->
-<!--			</div>-->
-<!--			<hr>      -->
-<!--			<div class="row">-->
-<!--				<article class="col-xs-12">-->
-<!--					<h2>Completely Synergize</h2>-->
-<!--					<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>-->
-<!--					<p><button class="btn btn-outline-danger">Read More</button></p>-->
-<!--					<p class="pull-right"><span class="tag tag-default">keyword</span> <span class="tag tag-default">tag</span> <span class="tag tag-default">post</span></p>-->
-<!--					<ul class="list-inline">-->
-<!--						<li class="list-inline-item"><a href="#">2 Days Ago</a></li>-->
-<!--						<li class="list-inline-item"><a href="#"><span class="glyphicon glyphicon-comment"></span> 12 Comments</a></li>-->
-<!--						<li class="list-inline-item"><a href="#"><span class="glyphicon glyphicon-share"></span> 18 Shares</a></li>-->
-<!--					</ul>-->
-<!--				</article>-->
-<!--			</div>-->
-<!--			<hr>-->
-<!--		</div>&lt;!&ndash;/Center Column&ndash;&gt;-->
+
 
 
 	  <!-- Right Column -->
-	  <div class="col-sm-3">
+	  <div id="generalbox" class="col-sm-3">
 
 			<!-- Form --> 
 			<div class="card">
@@ -187,7 +140,7 @@
 			<div class="card">
 				<div class="card-header p-b-0">
 					<h5 class="card-title">
-						<i class="fa fa-tachometer" aria-hidden="true"></i> 
+						<i class="fa fa-tachometer" aria-hidden="true"></i>
 					Support Resources Available
 					</h5>
 				</div>
@@ -280,16 +233,14 @@
 			</div>
 			<!-- /.row -->
 		</div>
+
 	</div>
 
 	<div class="small-print">
 		<div class="container">
 			<p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
 
-
-
-
-		</div>
+			</div>
 		<button class="open-button" onclick="openForm()">Administrator Portal</button>
 
 		<div class="form-popup" id="myForm">
@@ -305,6 +256,8 @@
 				<button type="submit" class="btn">Login</button>
 				<button type="button" class="btn cancel" onclick="closeForm()">Close</button>
 			</form>
+
+
 
 		</div>
 
