pre presentation push

--- a/index.html
+++ b/index.html
@@ -18,13 +18,6 @@
     <!-- For icons -->
     <link href="css/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->
-<!--        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></scrip t>-->
-<!--    <![endif]&ndash;&gt;-->
-
 </head>
 
 <body>
@@ -60,27 +53,43 @@
 	</div>
 
 <!-- Left Column -->
-<div id="generalbox" class="col-sm-9">
+<div class="align-middle" style="padding-left: 15%; padding-right: 5%">
+<div id="generalbox" class="col-sm-6">
 			<!-- List-Group Panel -->
 			<div class="card">
+
 				<div class="card-header p-b-0">
 					<h5 class="card-title"><i class="fa fa-random" aria-hidden="true"></i>Do I Qualify?</h5>
 				</div>
-				<div class="list-group list-group-flush">
-					<a href="#" class="list-group-item list-group-item-action">Request a free Consultation</a>
+
+				<div class="card-block">
+					<form>
+						<ul>
+							<li>Must Reside within Kent School Zip Code, Check here</li>
+							<li>Will support <b>anyone</b> without a permanent shelter</li>
+
+						</ul>
+					</form>
+<!--					<a href="#" class="mx-auto btn btn-success">Request a free Consultation</a>-->
+					<div class="col-sm-12">
+						<p style="float: right;">Appointments are made first come first served. Online form is only accessibl
+							e during business hours. If you cannot access
+							form it is either outside of business hours or we have filled our appointments for the week. Please try again next Monday
+							beginning at 1pm<br><br><i>Sign up here or call 253-852-4100</i></p></i><button type="submit" class="btn btn-primary">Sign up</button><input style="float: right;" type="text" placeholder="Zip Code" /></div>
 				</div>
+
 			</div>
 
 			<!-- Text Panel -->
 			<div class="card">
 				<div class="card-header p-b-0">
-					<h5 class="card-title"><i class="fa fa-cog" aria-hidden="true"></i>Program Requirements</h5>
-
+					<h5 class="card-title"><i class="fa fa-cog" aria-hidden="true"></i>Program Assistance</h5>
 				</div>
 				<form>
 
 				</form>
 				<div class="card-block">
+					<li>Utilities</li><li> Rent</li><li>Gas</li><li>Clothing and Household Items</li><li>ID or Driver's License</li><li>Help With Mobile Plans</li>
 					<p><button class="btn btn-secondary">Read More..</button></p>
 				</div>
 			</div>
@@ -114,55 +123,54 @@
 
 	  <!-- Right Column -->
 	  <div id="generalbox" class="col-sm-3">
-
-			<!-- Form --> 
-			<div class="card">
-				<div class="card-header p-b-0">
-					<h5 class="card-title">
-						<i class="fa fa-sign-in" aria-hidden="true"></i> 
-						Log In
-					</h5>
-				</div>
-				<div class="card-block">
-					<form>
-						<div class="form-group">
-							<input type="text" class="form-control" id="uid" name="uid" placeholder="Username">
-						</div>
-						<div class="form-group">
-							<input type="password" class="form-control" id="pwd" name="pwd" placeholder="Password">
-						</div>
-						<button type="submit" class="btn btn-primary">Log In</button>
-					</form>
-				</div>
-			</div>
  
 			<!-- Progress Bars -->
 			<div class="card">
 				<div class="card-header p-b-0">
 					<h5 class="card-title">
-						<i class="fa fa-tachometer" aria-hidden="true"></i>
-					Support Resources Available
+						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-flower1" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" d="M6.174 1.184a2 2 0 0 1 3.652 0A2 2 0 0 1 12.99 3.01a2 2 0 0 1 1.826 3.164 2 2 0 0 1 0 3.652 2 2 0 0 1-1.826 3.164 2 2 0 0 1-3.164 1.826 2 2 0 0 1-3.652 0A2 2 0 0 1 3.01 12.99a2 2 0 0 1-1.826-3.164 2 2 0 0 1 0-3.652A2 2 0 0 1 3.01 3.01a2 2 0 0 1 3.164-1.826zM8 1a1 1 0 0 1 1 1l-.002.03a4.997 4.997 0 0 1-.064.387c-.049.241-.122.542-.213.887a60.59 60.59 0 0 1-.676 2.314L8 5.762l-.045-.144a60.59 60.59 0 0 1-.676-2.314 16.705 16.705 0 0 1-.213-.887 4.99 4.99 0 0 1-.064-.386A1 1 0 0 1 8 1zM2 9a1 1 0 1 1 .03-1.998l.091.01c.077.012.176.029.296.054.241.049.542.122.887.213a60.59 60.59 0 0 1 2.314.676L5.762 8l-.144.045c-.8.248-1.626.494-2.314.676-.345.091-.646.164-.887.213a4.99 4.99 0 0 1-.386.064L2 9zm7 5a1 1 0 0 1-2 0l.002-.03a4.996 4.996 0 0 1 .064-.386c.049-.242.122-.543.213-.888.182-.688.428-1.513.676-2.314L8 10.238l.045.144c.248.8.494 1.626.676 2.314.091.345.164.646.213.887a5.005 5.005 0 0 1 .064.386L9 14zm-5.696-2.134a1 1 0 0 1-1-1.732l.027-.014c.02-.01.048-.021.084-.036a5.09 5.09 0 0 1 .283-.102c.233-.078.53-.165.874-.258a60.598 60.598 0 0 1 2.343-.572l.147-.033-.103.11a58.239 58.239 0 0 1-1.666 1.743c-.253.252-.477.465-.66.629a5.001 5.001 0 0 1-.304.248l-.025.017zM4.5 14.062a1 1 0 0 0 1.366-.366l.014-.027c.01-.02.021-.048.036-.084a5.09 5.09 0 0 0 .102-.283c.078-.233.165-.53.258-.874a60.6 60.6 0 0 0 .572-2.343l.033-.147-.11.102a60.848 60.848 0 0 0-1.743 1.667 17.07 17.07 0 0 0-.629.66 5.06 5.06 0 0 0-.248.304l-.017.025a1 1 0 0 0 .366 1.366zm9.196-8.196a1 1 0 0 0-1-1.732l-.025.017a4.951 4.951 0 0 0-.303.248 16.69 16.69 0 0 0-.661.629A60.72 60.72 0 0 0 10.04 6.77l-.102.111.147-.033a60.6 60.6 0 0 0 2.342-.572c.345-.093.642-.18.875-.258a4.993 4.993 0 0 0 .367-.138.53.53 0 0 0 .027-.014zM11.5 1.938a1 1 0 0 1 .366 1.366l-.017.025a5.001 5.001 0 0 1-.248.303 17.01 17.01 0 0 1-.629.661A60.614 60.614 0 0 1 9.23 5.96l-.111.102.033-.147a60.62 60.62 0 0 1 .572-2.342c.093-.345.18-.642.258-.875a5.066 5.066 0 0 1 .138-.367l.014-.027a1 1 0 0 1 1.366-.366zM14 9a1 1 0 0 0 0-2l-.03.002a4.996 4.996 0 0 0-.386.064c-.242.049-.543.122-.888.213-.688.182-1.513.428-2.314.676L10.238 8l.144.045c.8.248 1.626.494 2.314.676.345.091.646.164.887.213a4.996 4.996 0 0 0 .386.064L14 9zM1.938 4.5a1 1 0 0 0 .393 1.38l.084.035c.072.03.166.064.283.103.233.078.53.165.874.258a60.88 60.88 0 0 0 2.343.572l.147.033-.103-.111a60.584 60.584 0 0 0-1.666-1.742 16.705 16.705 0 0 0-.66-.629 4.996 4.996 0 0 0-.304-.248l-.025-.017a1 1 0 0 0-1.366.366zm2.196-1.196A1 1 0 1 1 5.88 2.33c.01.02.021.048.036.084.029.072.063.166.102.283.078.233.165.53.258.875.186.687.387 1.524.572 2.342l.033.147-.11-.102a60.597 60.597 0 0 1-1.743-1.667 16.713 16.713 0 0 1-.629-.66 4.996 4.996 0 0 1-.248-.304l-.017-.025zm9.928 8.196a1 1 0 0 1-1.366.366l-.025-.017a4.946 4.946 0 0 1-.303-.248 16.71 16.71 0 0 1-.661-.629A60.73 60.73 0 0 1 10.04 9.23l-.102-.111.147.033c.818.185 1.655.386 2.342.572.345.093.642.18.875.258a5 5 0 0 1 .367.138 1 1 0 0 1 .394 1.38zm-3.928 2.196a1 1 0 0 0 1.732-1l-.017-.025a5.065 5.065 0 0 0-.248-.303 16.705 16.705 0 0 0-.629-.661A60.462 60.462 0 0 0 9.23 10.04l-.111-.102.033.147a60.6 60.6 0 0 0 .572 2.342c.093.345.18.642.258.875a4.985 4.985 0 0 0 .138.367.575.575 0 0 0 .014.027zM8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+						</svg></i>
+					Who we are...
 					</h5>
 				</div>
 				<div class="card-block">
-                    <div class="text-xs-center" id="progress-caption-1">Rent Assistance &hellip; 100%</div>
-                    <progress class="progress progress-success" value="100" max="100" aria-describedby="progress-caption-1"></progress>
-                    <div class="text-xs-center" id="progress-caption-2">General/Other Assistance &hellip; 80%</div>
-                    <progress class="progress progress-info" value="80" max="100" aria-describedby="progress-caption-2"></progress>
-                    <div class="text-xs-center" id="progress-caption-3">Food Assistance &hellip; 45%</div>
-                    <progress class="progress progress-warning" value="45" max="100" aria-describedby="progress-caption-3"></progress>
-                    <div class="text-xs-center" id="progress-caption-4"> Individuals In Need Helped &hellip; 35%</div>
-                    <progress class="progress progress-danger" value="35" max="100" aria-describedby="progress-caption-4"></progress>
-				</div>
+					<p style="text-align: center"><b>The Outreach</b><i><br><hr> <div class="col-sm-12" style="padding-left: 6%; padding-right: 6%; text-align: center">provides low income Kent residents and the homeless with food, water, clothing, utility shut off
+					assistance, drivers licenses and IDs, and referral information. We also provide school supplies and household
+					furnishings, when they are available Those seeking help must live within the Kent school district, be disabled, have
+					children living with them, or are senior citizens. We always help the homeless.
+					The Outreach began almost 30 years ago when St. James saw the need arise. During these despera
+					te times, our office
+					is a lifeline for those in need. It has evolved into a place
+					that
+					give
+					s
+					hope to those
+						in need</i></p></div>
+			</div>
+<!--				<div class="card-block">-->
+<!--                    <div class="text-xs-center" id="progress-caption-1">Rent Assistance &hellip; 100%</div>-->
+<!--                    <progress class="progress progress-success" value="100" max="100" aria-describedby="progress-caption-1"></progress>-->
+<!--                    <div class="text-xs-center" id="progress-caption-2">General/Other Assistance &hellip; 80%</div>-->
+<!--                    <progress class="progress progress-info" value="80" max="100" aria-describedby="progress-caption-2"></progress>-->
+<!--                    <div class="text-xs-center" id="progress-caption-3">Food Assistance &hellip; 45%</div>-->
+<!--                    <progress class="progress progress-warning" value="45" max="100" aria-describedby="progress-caption-3"></progress>-->
+<!--                    <div class="text-xs-center" id="progress-caption-4"> Individuals In Need Helped &hellip; 35%</div>-->
+<!--                    <progress class="progress progress-danger" value="35" max="100" aria-describedby="progress-caption-4"></progress>-->
+<!--				</div>-->
 			</div>
 
 			<!-- Carousel --> 
 <!-- 			<h4><i class="fa fa-language" aria-hidden="true"></i></h4>-->
-			<div id="side-carousel" class="carousel slide" data-ride="carousel">
+
+			<div id="side-carousel" class="carousel slide" data-ride="carousel" style="position: relative">
 				<ol class="carousel-indicators">
 					<li data-target="#side-carousel" data-slide-to="0" class="active"></li>
 					<li data-target="#side-carousel" data-slide-to="1"></li>
 					<li data-target="#side-carousel" data-slide-to="2"></li>
+					<li data-target="#side-carousel" data-slide-to="3"></li>
+					<li data-target="#side-carousel" data-slide-to="4"></li>
+					<li data-target="#side-carousel" data-slide-to="5"></li>
 				</ol>
 				<div class="carousel-inner" role="listbox">
 					<div class="carousel-item active">
@@ -191,13 +199,40 @@
 							<h3>C...</h3>
 							<p>Description C.</p>
 						</div>
-					</div>			  
+					</div>
+					<div class="carousel-item">
+						<a href="#">
+							<img class="img-responsive" src="https://cdn.discordapp.com/attachments/759066173593223182/767589954431090688/st_james.jpg" alt="">
+						</a>
+						<div class="carousel-caption">
+							<h3>C...</h3>
+							<p>Description C.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<a href="#">
+							<img class="img-responsive" src="https://cdn.discordapp.com/attachments/759066173593223182/767589986659860480/church.jpg" alt="">
+						</a>
+						<div class="carousel-caption">
+							<h3>C...</h3>
+							<p>Description C.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<a href="#">
+							<img class="img-responsive" src="https://cdn.discordapp.com/attachments/759066173593223182/767590018524905512/church_outside.jpg" alt="">
+						</a>
+						<div class="carousel-caption">
+							<h3>C...</h3>
+							<p>Description C.</p>
+						</div>
+					</div>
 				</div>
-				<a class="left carousel-control" href="#side-carousel" role="button" data-slide="prev">
+				<a class="left carousel-control" href="#side-carousel" role="button" data-slide="prev" style="visibility: hidden">
 				  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 				  <span class="sr-only">Previous</span>
 				</a>
-				<a class="right carousel-control" href="#side-carousel" role="button" data-slide="next">
+				<a class="right carousel-control" href="#side-carousel" role="button" data-slide="next" style="visibility: hidden">
 				  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 				  <span class="sr-only">Next</span>
 				</a>
@@ -206,26 +241,13 @@
 	  </div><!--/Right Column -->
 
 	</div><!--/container-fluid-->
-
+</div>
 	<div class="footer-blurb">
 		<div class="container">
 			<div class="row">
+
+
 				<div class="col-sm-3 footer-blurb-item">
-					<h3><i class="fa fa-text-height" aria-hidden="true"></i> 1</h3>
-					<p> Description.</p>
-					<p><a class="btn btn-primary" href="#">Procrastinate</a></p>
-				</div>
-				<div class="col-sm-3 footer-blurb-item">
-					<h3><i class="fa fa-wrench" aria-hidden="true"></i> 2</h3>
-					<p>Description </p>
-					<p><a class="btn btn-success" href="#">Unleash</a></p>
-				</div>
-				<div class="col-sm-3 footer-blurb-item">
-					<h3><i class="fa fa-paperclip" aria-hidden="true"></i> 3</h3>
-					<p> Description.</p>
-					<p><a class="btn btn-primary" href="#">Complete</a></p>
-				</div>
-				<div class="col-sm-3 footer-blurb-item">-->
 
 				</div>
 
@@ -238,8 +260,9 @@
 
 	<div class="small-print">
 		<div class="container">
-			<p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
 
+			<p id="bottom"><a href="#" style="color: black;">Terms &amp; Conditions</a> | <a href="#" style="color: black;">Privacy Policy</a> | <a href="#" style="color: black;">Contact</a></p>
+			<small id="bottom">24447 94th Ave. S Kent, WA 98030</small>
 			</div>
 		<button class="open-button" onclick="openForm()">Administrator Portal</button>
 
