--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<script src="js/home.js"></script>
+	<script src="js/modal.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/home.css">
 	<title>The Cohorts (P.W.A)</title>
 
@@ -75,38 +76,136 @@
 						accessible during business hours. If you cannot access
 						form it is either outside of business hours or we have filled our appointments for the week. Please try again next Monday
 						beginning at 1pm<br><br><i>Sign up here or call 253-852-4100</i></p>
-					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-						Sign up
-					</button>
-					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="exampleModalLabel" style="text-align: center;">Request Assistance</h5>
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
-								</div>
-								<div class="modal-body">
-									<form>
-										<div class="form-group">
-											<label for="recipient-name" class="col-form-label">Recipient:</label>
-											<input type="text" class="form-control" id="recipient-name">
-										</div>
-										<div class="form-group">
-											<label for="message-text" class="col-form-label">Message:</label>
-											<textarea class="form-control" id="message-text"></textarea>
-										</div>
-									</form>
-								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Sign Up</button>
-								</div>
+
+
+<!--					<button type="submit" class="btn btn-primary">Sign up</button><input onChange="zipcode()" type="text" id="zip" style="float: right;" type="text" placeholder="Zip Code" /><span id="response"></span>-->
+				</div>
+				<div class="container">
+					<script>$.fn.goValidate = function() {
+						var $form = this,
+								$inputs = $form.find('input:text');
+
+						var validators = {
+							name: {
+								regex: /^[A-Za-z]{3,}$/
+							},
+							pass: {
+								regex: /(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}/
+							},
+							email: {
+								regex: /^[\w\-\.\+]+\@[a-zA-Z0-9\.\-]+\.[a-zA-z0-9]{2,4}$/
+							},
+							phone: {
+								regex: /^[2-9]\d{2}-\d{3}-\d{4}$/,
+							}
+						};
+						var validate = function(klass, value) {
+							var isValid = true,
+									error = '';
+
+							if (!value && /required/.test(klass)) {
+								error = 'This field is required';
+								isValid = false;
+							} else {
+								klass = klass.split(/\s/);
+								$.each(klass, function(i, k){
+									if (validators[k]) {
+										if (value && !validators[k].regex.test(value)) {
+											isValid = false;
+											error = validators[k].error;
+										}
+									}
+								});
+							}
+							return {
+								isValid: isValid,
+								error: error
+							}
+						};
+						var showError = function($input) {
+							var klass = $input.attr('class'),
+									value = $input.val(),
+									test = validate(klass, value);
+
+							$input.removeClass('invalid');
+							$('#form-error').addClass('hide');
+
+							if (!test.isValid) {
+								$input.addClass('invalid');
+
+								if(typeof $input.data("shown") == "undefined" || $input.data("shown") == false){
+									$input.popover('show');
+								}
+
+							}
+							else {
+								$input.popover('hide');
+							}
+						};
+
+						$inputs.keyup(function() {
+							showError($(this));
+						});
+
+						$inputs.on('shown.bs.popover', function () {
+							$(this).data("shown",true);
+						});
+
+						$inputs.on('hidden.bs.popover', function () {
+							$(this).data("shown",false);
+						});
+
+						$form.submit(function(e) {
+
+							$inputs.each(function() { /* test each input */
+								if ($(this).is('.required') || $(this).hasClass('invalid')) {
+									showError($(this));
+								}
+							});
+							if ($form.find('input.invalid').length) { /* form is not valid */
+								e.preventDefault();
+								$('#form-error').toggleClass('hide');
+							}
+						});
+						return this;
+					};
+					$('form').goValidate();</script>
+					<div class="row">
+
+						<h1 class="text-center"><a href="#myModal" role="button" class="btn btn-primary btn-lg" data-toggle="modal">Register</a></h1>
+
+					</div>
+				</div>
+
+				<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+								<h3 id="myModalLabel">Register for assistance</h3>
+							</div>
+							<div class="modal-body">
+								<h4>Assistance information, necessary documentations</h4>
+							<div class="modal-body">
+								<form class="form-horizontal col-sm-12">
+									<div class="form-group" style="padding: 10px"><label style="padding: .2em">Currently Without Residence</label><input class="form-check-input" type="checkbox" id="residence"></div>
+									<div class="form-group"><label>E-Mail</label><input class="form-control email" placeholder="email@you.com (so that we can contact you)" data-placement="top" data-trigger="manual" data-content="Must be a valid e-mail address (user@gmail.com)" type="text"></div>
+									<div class="form-group"><label>Phone</label><input class="form-control phone" placeholder="999-999-9999" data-placement="top" data-trigger="manual" data-content="Must be a valid phone number (999-999-9999)" type="text"></div>
+									<div class="form-group"><label>Zip Code</label><input class="form-control required" placeholder="Your current zipcode" data-placement="top" data-trigger="manual" data-content="Must be within the kent area (insert those zips here)." type="text"></div>
+									<div class="form-group"<Label>Services</Label></div>
+									<input type="checkbox" name="vehicle1" value="Bike"><label for="vehicle1"> I have a bike</label><br>
+									<input type="checkbox" name="vehicle2" value="Car"><label for="vehicle2"> I have a car</label><br>
+									<input type="checkbox" name="vehicle3" value="Boat" checked><label for="vehicle3"> I have a boat</label>
+								<br>
+									<div class="form-group"><label>Services</label><textarea class="form-check-input" placeholder="Your message here.." data-placement="top" data-trigger="manual"></textarea></div>
+									<div class="form-group"><button type="submit" class="btn btn-success pull-right">Send It!</button> <p class="help-block pull-left text-danger hide" id="form-error">&nbsp; The form is not valid. </p></div>
+								</form>
+							</div>
+							<div class="modal-footer">
+								<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
 							</div>
 						</div>
 					</div>
-<!--					<button type="submit" class="btn btn-primary">Sign up</button><input onChange="zipcode()" type="text" id="zip" style="float: right;" type="text" placeholder="Zip Code" /><span id="response"></span>-->
 				</div>
 			</div>
 
