--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 				<button type="submit" class="btn btn-primary">Sign up</button>
 			</div>
 		</div>
+	</div>
 
 	</div><!--/Left Column-->
 
