--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<script src="js/home.js"></script>
-	<script src="js/modal.js"></script>
+<!--	<script src="js/home.js"></script>-->
+<!--	<script src="js/form.js"></script>-->
 	<link rel="stylesheet" type="text/css" href="css/home.css">
 	<title>The Cohorts (P.W.A)</title>
 
@@ -15,7 +15,7 @@
 
 	<!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
 	<link href="css/custom.css" rel="stylesheet">
-
+	<link href="css/form.css" rel="stylesheet">
 	<!-- For icons -->
 	<link href="css/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
@@ -77,135 +77,291 @@
 						form it is either outside of business hours or we have filled our appointments for the week. Please try again next Monday
 						beginning at 1pm<br><br><i>Sign up here or call 253-852-4100</i></p>
 
+					<div id="myElem" style="width: 90%">
+						<div id="container" class="container <?php echo $css; ?>">
+							<div class="top">
+								<h3 id="myLabel" style="text-align: center;">Register for assistance</h3>
+							</div>
+							<div class="body">
+								<h4 style="text-align: center;">Assistance information, necessary documentations</h4>
+								<h6 style="color: grey;"><sub>*Only available during office hours</sub></h6>
+								<div class="body">
+									<form class="form-horizontal col-sm-12">
+										<div class="form-check" style="padding-left: 2%">
+											<input type="checkbox" class="form-check-input" id="check1" onClick="hideZip()">
+											<label class="form-check-label" for="check1">Currently Without Residence</label>
+										</div>
 
-<!--					<button type="submit" class="btn btn-primary">Sign up</button><input onChange="zipcode()" type="text" id="zip" style="float: right;" type="text" placeholder="Zip Code" /><span id="response"></span>-->
-				</div>
-				<div class="container">
-					<script>$.fn.goValidate = function() {
-						var $form = this,
-								$inputs = $form.find('input:text');
+										<div class="form-group">
+											<label>First Name</label>
+											<input id="nameVal" name="fname" id="fname" class="form-control name"
+												   placeholder="Your first name" for="nameVal" data-placement="top"
+												   data-trigger="manual" data-content="Must be your legal first name"
+												   type="text" required></div>
+										<aside id="nameError" class="formErrors">&#9888; Please enter your first name.</aside>
+										<div class="form-group">
 
-						var validators = {
-							name: {
-								regex: /^[A-Za-z]{3,}$/
-							},
-							pass: {
-								regex: /(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}/
-							},
-							email: {
-								regex: /^[\w\-\.\+]+\@[a-zA-Z0-9\.\-]+\.[a-zA-z0-9]{2,4}$/
-							},
-							phone: {
-								regex: /^[2-9]\d{2}-\d{3}-\d{4}$/,
-							}
-						};
-						var validate = function(klass, value) {
-							var isValid = true,
-									error = '';
+											<label>Last Name</label>
+											<input id="lnameVal" for="lnameVal" name="lname" id="lname" class="form-control name"
+												   placeholder="Your last name" data-placement="top"
+												   data-trigger="manual" data-content="Must be your legal last name"
+												   type="text"></div>
+										<aside id="lnameError" class="formErrors">&#9888; Please enter your last name.</aside>
 
-							if (!value && /required/.test(klass)) {
-								error = 'This field is required';
-								isValid = false;
-							} else {
-								klass = klass.split(/\s/);
-								$.each(klass, function(i, k){
-									if (validators[k]) {
-										if (value && !validators[k].regex.test(value)) {
-											isValid = false;
-											error = validators[k].error;
-										}
-									}
-								});
-							}
-							return {
-								isValid: isValid,
-								error: error
-							}
-						};
-						var showError = function($input) {
-							var klass = $input.attr('class'),
-									value = $input.val(),
-									test = validate(klass, value);
+										<div class="form-group">
+											<label>E-Mail</label>
+											<input id="emailVal" for="emailVal" name="email" id="email" class="form-control email"
+												   placeholder="email@you.com (so that we can contact you)"
+												   data-placement="top" data-trigger="manual"
+												   data-content="Must be a valid e-mail address (user@gmail.com)"
+												   type="text">
+											<aside id="emailError" class="formErrors">&#9888; Please enter an email</aside>
+										</div>
+										<div name="pnum" class="form-group"><label>Phone</label>
+											<input id="pnum" for="pnum" class="form-control phone"
+												   placeholder="999-999-9999" data-placement="top"
+												   data-trigger="manual"
+												   data-content="Must be a valid phone number (999-999-9999)"
+												   type="text"></div>
+										<aside id="phoneError" class="formErrors">&#9888; Please enter a valid phone number.</aside>
 
-							$input.removeClass('invalid');
-							$('#form-error').addClass('hide');
+										<div class="form-group" id="show">
+											<label name="zip" id="zip" for="inputZip">Enter your zip code: </label>
+											<label>Eligible zipcodes: <strong>"98030" "98031" "98032" "98042" "98058" </strong></label>
+											<input class="form-control" type="text" id="inputZip" placeholder="zip code">
+											<aside id="emptyZipError" class="formErrors">&#9888; Please enter your zipCode.</aside>
+											<aside id="outsideZipError" class="formErrors">&#9888; Your zip code is outside the service range.</aside>
+										</div>
 
-							if (!test.isValid) {
-								$input.addClass('invalid');
+										<fieldset class="form-group">
+											<legend>How can we help you? </legend>
 
-								if(typeof $input.data("shown") == "undefined" || $input.data("shown") == false){
-									$input.popover('show');
+											<div class="form-check">
+												<input name="bills" class="form-check-input" type="checkbox" value="bills" id="check2" onClick="showBills()">
+												<label class="form-check-label" for="bills">
+													I need help with utilities bill
+												</label>
+												<aside id="show2"><ul><li>1 time per calendar year</li>
+													<li>Person seeking help must also be name on bill</li>
+													<li>Must have urgent or shutoff notice</li></ul>
+												</aside>
+											</div>
+
+											<div class="form-check">
+												<input name="food" class="form-check-input" type="checkbox" value="food" id="check3" onClick="showFood()">
+												<label class="form-check-label" for="food">
+													I need help with emergency food and toiletries
+												</label>
+												<aside id="show3"><ul><li>Once per month.</li>
+												</aside>
+											</div>
+
+											<div class="form-check">
+												<input name="gas" class="form-check-input" type="checkbox" value="gas" id="check4" onClick="showGas()">
+												<label class="form-check-label" for="gas">
+													I need assistance with gas voucher
+												</label>
+												<aside id="show4"><ul><li>Every six months.</li>
+													<li>Must have a valid/current Driver's license</li>
+
+												</aside>
+											</div>
+
+											<div class="form-check">
+												<input name="other" class="form-check-input" type="checkbox" value="other" id="other">
+												<label class="form-check-label" for="other">
+													I need help with Others (not listed above)
+												</label>
+												<input type="text" placeholder="Please Enter here">
+											</div>
+
+										</fieldset>
+									</form>
+
+									<div class="form-group">
+										<button type="submit" class="btn btn-success pull-right" id="submitButton">Send It!</button>
+										<p class="help-block pull-left text-danger hide formErrors">&nbsp; The form is not valid. </p>
+									</div>
+
+								</div>
+						<script>
+
+							let zipCodeButton = document.getElementById("submitButton");
+							zipCodeButton.addEventListener("click", validateZip);
+
+							function validateZip()
+							{
+								let valid = true;
+								let nameError = document.getElementById("nameError");
+								let emailError = document.getElementById("emailError");
+								let emptyZipError = document.getElementById("emptyZipError");
+								let outsideZipError = document.getElementById("outsideZipError");
+								let lnameError = document.getElementById("lnameError");
+								let phoneError = document.getElementById("phoneError");
+
+								lnameError.style.visibility = "hidden";
+								phoneError.style.visibility = "hidden";
+								// make email error invisible
+								emailError.style.visibility="hidden";
+								// make name error invisibile
+								nameError.style.visibility = "hidden";
+
+								// emptyZipError code invisible
+								emptyZipError.style.visibility = "hidden";
+
+								// outsideZipError code invisible
+								outsideZipError.style.visibility = "hidden";
+
+								let lnameValue = document.getElementById("lnameVal").value;
+								let phoneValue = document.getElementById("pnum").value;
+
+								let nameValue = document.getElementById("nameVal").value;
+								let emailValue = document.getElementById("emailVal").value;
+
+								if(lnameValue === ""){
+									lnameError.style.visibility = "visible";
+									valid = false;
 								}
 
-							}
-							else {
-								$input.popover('hide');
-							}
-						};
-
-						$inputs.keyup(function() {
-							showError($(this));
-						});
-
-						$inputs.on('shown.bs.popover', function () {
-							$(this).data("shown",true);
-						});
-
-						$inputs.on('hidden.bs.popover', function () {
-							$(this).data("shown",false);
-						});
-
-						$form.submit(function(e) {
-
-							$inputs.each(function() { /* test each input */
-								if ($(this).is('.required') || $(this).hasClass('invalid')) {
-									showError($(this));
+								const phoneNo = /^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$/;
+								if(phoneValue === "" || !phoneValue.match(phoneNo)){
+									phoneError.style.visibility = "visible";
+									valid = false;
 								}
-							});
-							if ($form.find('input.invalid').length) { /* form is not valid */
-								e.preventDefault();
-								$('#form-error').toggleClass('hide');
+
+								if (emailValue === ""){
+									emailError.style.visibility = "visible";
+									valid = false;
+								}
+
+								if(nameValue === ""){
+									nameError.style.visibility = "visible";
+									valid = false;
+								}
+
+								let zipInputValue = document.getElementById("inputZip").value;
+
+								if(zipInputValue === "")
+								{
+									emptyZipError.style.visibility = "visible";
+									valid = false;
+								}
+								else if(zipInputValue!= "98030" && zipInputValue != "98031" && zipInputValue != "98032" && zipInputValue != "98042" && zipInputValue != "98058")
+								{
+									outsideZipError.style.visibility = "visible";
+									valid = false;
+								}
+
+								return valid;
+
 							}
-						});
-						return this;
-					};
-					$('form').goValidate();</script>
-					<div class="row">
 
-						<h1 class="text-center"><a href="#myModal" role="button" class="btn btn-primary btn-lg" data-toggle="modal">Register</a></h1>
+							function showFood() {
+								var checkBox = document.getElementById("check3");
+								var text3 = document.getElementById("show3");
+								if(checkBox.checked == true){
+									text3.style.display = "none";
+								} else {
+									text3.style.display = "block";
+								}
+							}
 
-					</div>
-				</div>
+							function showGas() {
+								var checkBox = document.getElementById("check4");
+								var text4 = document.getElementById("show4");
+								if(checkBox.checked == true){
+									text4.style.display = "none";
+								} else {
+									text4.style.display = "block";
+								}
+							}
+							function showBills() {
+								var checkBox = document.getElementById("check2");
+								var text = document.getElementById("show2");
+								if(checkBox.checked == true){
+									text.style.display = "none";
+								} else {
+									text.style.display = "block";
+								}
+							}
 
-				<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<div class="modal-header">
-								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-								<h3 id="myModalLabel">Register for assistance</h3>
-							</div>
-							<div class="modal-body">
-								<h4>Assistance information, necessary documentations</h4>
-							<div class="modal-body">
-								<form class="form-horizontal col-sm-12">
-									<div class="form-group" style="padding: 10px"><label style="padding: .2em">Currently Without Residence</label><input class="form-check-input" type="checkbox" id="residence"></div>
-									<div class="form-group"><label>E-Mail</label><input class="form-control email" placeholder="email@you.com (so that we can contact you)" data-placement="top" data-trigger="manual" data-content="Must be a valid e-mail address (user@gmail.com)" type="text"></div>
-									<div class="form-group"><label>Phone</label><input class="form-control phone" placeholder="999-999-9999" data-placement="top" data-trigger="manual" data-content="Must be a valid phone number (999-999-9999)" type="text"></div>
-									<div class="form-group"><label>Zip Code</label><input class="form-control required" placeholder="Your current zipcode" data-placement="top" data-trigger="manual" data-content="Must be within the kent area (insert those zips here)." type="text"></div>
-									<div class="form-group"<Label>Services</Label></div>
-									<input type="checkbox" name="vehicle1" value="Bike"><label for="vehicle1"> I have a bike</label><br>
-									<input type="checkbox" name="vehicle2" value="Car"><label for="vehicle2"> I have a car</label><br>
-									<input type="checkbox" name="vehicle3" value="Boat" checked><label for="vehicle3"> I have a boat</label>
-								<br>
-									<div class="form-group"><label>Services</label><textarea class="form-check-input" placeholder="Your message here.." data-placement="top" data-trigger="manual"></textarea></div>
-									<div class="form-group"><button type="submit" class="btn btn-success pull-right">Send It!</button> <p class="help-block pull-left text-danger hide" id="form-error">&nbsp; The form is not valid. </p></div>
-								</form>
-							</div>
-							<div class="modal-footer">
-								<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+							function hideZip() {
+								var checkBox = document.getElementById("check1");
+								var text = document.getElementById("show");
+								if(checkBox.checked == true){
+									text.style.display = "none";
+								} else {
+									text.style.display = "block";
+								}
+							}
+
+							let utilitiesBill = document.getElementById("bills");
+							utilitiesBill.addEventListener("click", validateCheckbox);
+
+							let food = document.getElementById("food");
+							food.addEventListener("click", validateCheckbox);
+
+							let gas = document.getElementById("gas");
+							gas.addEventListener("click", validateCheckbox);
+
+							let other = document.getElementById("other");
+							gas.addEventListener("click", validateCheckbox);
+
+
+							function validateCheckbox()
+							{
+								let billsCheck = document.querySelector("#bills");
+
+								if(billsCheck.checked)
+								{
+									let billsNote = document.getElementById("billsNote");
+
+									let item1 = document.createElement("li");
+									let item2 = document.createElement("li");
+									let item3 = document.createElement("li");
+									item1.textContent = "1 time per calendar year";
+									item2.textContent = "Person seeking help must also be name on bill";
+									item3.textContent = "Must have urgent or shut-off notice";
+									billsNote.appendChild(item1);
+									billsNote.appendChild(item2);
+									billsNote.appendChild(item3);
+								}
+
+
+
+								let foodCheck = document.querySelector("#food")
+
+								if(foodCheck.checked)
+								{
+									let foodNote = document.getElementById("foodNote");
+
+									let item1 = document.createElement("li");
+									item1.textContent = "Once per month";
+									foodNote.appendChild(item1);
+								}
+
+								let gasCheck = document.querySelector("#gas")
+
+								if(gasCheck.checked)
+								{
+									let gasNote = document.getElementById("gasNote");
+
+									let item1 = document.createElement("li");
+									let item2 = document.createElement("li");
+									item1.textContent = "Every six months";
+									item2.textContent = "Must have a valid/current Driver's license not an ID card"
+									gasNote.appendChild(item1);
+									gasNote.appendChild(item2);
+								}
+							}
+						</script>
+								<div class="footer">
+								</div>
+
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>
 
@@ -424,6 +580,8 @@
 
 	<!-- Placeholder Images -->
 	<script src="js/holder.min.js"></script>
+	<script src="js/home.js"></script>
+	<script src="js/form.js"></script>
 
 </body>
 
