--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
 
 										<div class="form-group">
 											<label>First Name</label>
-											<input id="nameVal" name="fname" id="fname" class="form-control name"
-												   placeholder="Your first name" for="nameVal" data-placement="top"
+											<input id="nameVal" id="fname" class="form-control name"
+												   placeholder="Your first name" data-placement="top"
 												   data-trigger="manual" data-content="Must be your legal first name"
 												   type="text" required></div>
 										<aside id="nameError" class="formErrors">&#9888; Please enter your first name.</aside>
 										<div class="form-group">
 
 											<label>Last Name</label>
-											<input id="lnameVal" for="lnameVal" name="lname" id="lname" class="form-control name"
+											<input id="lnameVal" name="lname" id="lname" class="form-control name"
 												   placeholder="Your last name" data-placement="top"
 												   data-trigger="manual" data-content="Must be your legal last name"
 												   type="text"></div>
@@ -110,7 +110,7 @@
 
 										<div class="form-group">
 											<label>E-Mail</label>
-											<input id="emailVal" for="emailVal" name="email" id="email" class="form-control email"
+											<input id="emailVal" name="email" id="email" class="form-control email"
 												   placeholder="email@you.com (so that we can contact you)"
 												   data-placement="top" data-trigger="manual"
 												   data-content="Must be a valid e-mail address (user@gmail.com)"
@@ -118,7 +118,7 @@
 											<aside id="emailError" class="formErrors">&#9888; Please enter an email</aside>
 										</div>
 										<div name="pnum" class="form-group"><label>Phone</label>
-											<input id="pnum" for="pnum" class="form-control phone"
+											<input id="pnum"  class="form-control phone"
 												   placeholder="999-999-9999" data-placement="top"
 												   data-trigger="manual"
 												   data-content="Must be a valid phone number (999-999-9999)"
@@ -255,14 +255,14 @@
 								return valid;
 
 							}
-
+safal, dailee, jerad
 							function showFood() {
 								var checkBox = document.getElementById("check3");
 								var text3 = document.getElementById("show3");
 								if(checkBox.checked == true){
-									text3.style.display = "none";
-								} else {
 									text3.style.display = "block";
+								} else {
+									text3.style.display = "none";
 								}
 							}
 
@@ -270,18 +270,18 @@
 								var checkBox = document.getElementById("check4");
 								var text4 = document.getElementById("show4");
 								if(checkBox.checked == true){
-									text4.style.display = "none";
-								} else {
 									text4.style.display = "block";
+								} else {
+									text4.style.display = "none";
 								}
 							}
 							function showBills() {
 								var checkBox = document.getElementById("check2");
 								var text = document.getElementById("show2");
 								if(checkBox.checked == true){
-									text.style.display = "none";
-								} else {
 									text.style.display = "block";
+								} else {
+									text.style.display = "none";
 								}
 							}
 
