--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 										<div class="form-group">
 											<label>First Name</label>
-											<input id="nameVal" id="fname" class="form-control name"
+											<input id="nameVal" class="form-control name"
 												   placeholder="Your first name" data-placement="top"
 												   data-trigger="manual" data-content="Must be your legal first name"
 												   type="text" required></div>
@@ -102,7 +102,7 @@
 										<div class="form-group">
 
 											<label>Last Name</label>
-											<input id="lnameVal" id="lname" class="form-control name"
+											<input id="lnameVal" class="form-control name"
 												   placeholder="Your last name" data-placement="top"
 												   data-trigger="manual" data-content="Must be your legal last name"
 												   type="text"></div>
@@ -110,7 +110,7 @@
 
 										<div class="form-group">
 											<label>E-Mail</label>
-											<input id="emailVal" id="email" class="form-control email"
+											<input id="emailVal" class="form-control email"
 												   placeholder="email@you.com (so that we can contact you)"
 												   data-placement="top" data-trigger="manual"
 												   data-content="Must be a valid e-mail address (user@gmail.com)"
@@ -254,14 +254,13 @@
 								return valid;
 
 							}
-safal, dailee, jerad
 							function showFood() {
 								var checkBox = document.getElementById("check3");
 								var text3 = document.getElementById("show3");
 								if(checkBox.checked == true){
-									text3.style.display = "block";
-								} else {
 									text3.style.display = "none";
+								} else {
+									text3.style.display = "block";
 								}
 							}
 
@@ -269,18 +268,18 @@ safal, dailee, jerad
 								var checkBox = document.getElementById("check4");
 								var text4 = document.getElementById("show4");
 								if(checkBox.checked == true){
-									text4.style.display = "block";
-								} else {
 									text4.style.display = "none";
+								} else {
+									text4.style.display = "block";
 								}
 							}
 							function showBills() {
 								var checkBox = document.getElementById("check2");
 								var text = document.getElementById("show2");
 								if(checkBox.checked == true){
-									text.style.display = "block";
-								} else {
 									text.style.display = "none";
+								} else {
+									text.style.display = "block";
 								}
 							}
 
@@ -403,7 +402,7 @@ safal, dailee, jerad
 	</div><!--/Left Column-->
 
 	<!-- Right Column -->
-	<div id="generalbox" class="col-sm-3">
+	<div id="generalbox2" class="col-sm-3">
 
 		<!-- Progress Bars -->
 		<div class="card">
