--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 				give
 				s
 				hope to those
-				in need</i></p></div>
+				in need</p>
 			</div>
 		</div>
 
@@ -504,11 +504,7 @@
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
-
 	</div>
-
-</div>
-</div>
 <div class="footer-blurb">
 	<div class="container">
 		<div class="row">
@@ -528,7 +524,7 @@
 	<div class="container">
 
 		<p id="bottom"><a href="#" style="color: black;">Terms &amp; Conditions</a> | <a href="#" style="color: black;">Privacy Policy</a> | <a href="#" style="color: black;">Contact</a></p>
-		<small id="bottom">24447 94th Ave. S Kent, WA 98030</small>
+		<small id="bottom2">24447 94th Ave. S Kent, WA 98030</small>
 	</div>
 	<button class="open-button" onclick="openForm()">Administrator Portal</button>
 
@@ -545,8 +541,6 @@
 			<button type="submit" class="btn">Login</button>
 			<button type="button" class="btn cancel" onclick="closeForm()">Close</button>
 		</form>
-
-
 
 	</div>
 
