--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 											<div class="form-check">
 												<input name="bills" class="form-check-input" type="checkbox" value="bills" id="check2" onClick="showBills()">
-												<label class="form-check-label" for="bills">
+												<label class="form-check-label">
 													I need help with utilities bill
 												</label>
 												<aside id="show2"><ul><li>1 time per calendar year</li>
@@ -149,7 +149,7 @@
 
 											<div class="form-check">
 												<input name="food" class="form-check-input" type="checkbox" value="food" id="check3" onClick="showFood()">
-												<label class="form-check-label" for="food">
+												<label class="form-check-label">
 													I need help with emergency food and toiletries
 												</label>
 												<aside id="show3"><ul><li>Once per month.</li></ul></aside>
@@ -157,7 +157,7 @@
 
 											<div class="form-check">
 												<input name="gas" class="form-check-input" type="checkbox" value="gas" id="check4" onClick="showGas()">
-												<label class="form-check-label" for="gas">
+												<label class="form-check-label">
 													I need assistance with gas voucher
 												</label>
 												<aside id="show4"><ul><li>Every six months.</li>
@@ -429,6 +429,7 @@
 				in need</p>
 			</div>
 		</div>
+		</div>
 
 		<div id="side-carousel" class="carousel slide" data-ride="carousel" style="position: relative">
 			<ol class="carousel-indicators">
@@ -532,10 +533,10 @@
 		<form action="/action_page.php" class="form-container">
 			<h1>Login</h1>
 
-			<label for="email"><b>Email</b></label>
+			<label><b>Email</b></label>
 			<input type="text" placeholder="Enter Email" name="email" required>
 
-			<label for="psw"><b>Password</b></label>
+			<label><b>Password</b></label>
 			<input type="password" placeholder="Enter Password" name="psw" required>
 
 			<button type="submit" class="btn">Login</button>
