--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 				give
 				s
 				hope to those
-				in need</p>
+				in need
 			</div>
 		</div>
 		</div>
@@ -544,7 +544,7 @@
 		</form>
 
 	</div>
-
+</div>
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
